# Academic-trash

CS-669/Assignment_2/: Untitled.ipynb  model.py
CS-669/Assignment_2/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
CS-669/assignment_01/: Untitled.ipynb  models.py  solution.ipynb
CS-669/assignment_5/: solution.ipynb  trash.py
CS202/Assignment-1/: Report1.odt  a.out  problem2.cpp
CS202/Assignment-1/cs202assignment1/: Makefile  (+2 more)
CS202/Assignment-1/cs202assignment1e/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  problem1.cpp  problem3.cpp  seqLinearList.hpp  sortingImp.cpp
CS202/Assignment-2/: BinaryTree.hpp
CS207/LAB-1/: index.html  style.js  styles.css
CS207/LAB-2/: index.js  mailer.js  package-lock.json  package.json
CS207/LAB-3/: .gitignore  app.js  create.js  dbUtils.js  package-lock.json  package.json  practiseJS.js
IC272/lab10/: main1.py  main2.py  main3.py
IC272/lab11/: main1.py
IC272/lab2/: a1.py  a2.py  a3.py  a32.py  main.py
IC272/lab3/: Lab3Template.py  main.py  model.py  model.txt  test.ipynb
IC272/lab4/: D1.csv  D2.csv  lab44.py  module.py  module2.py  original.csv  test.py  test2.py
IC272/lab5/: .~lock.data.csv#  lab_9.py  main.py  models.py  plotter.py  preprocessor.py  test.py  vg.py
IC272/lab6/: main.py  main2.py  models.py  preprocessor.py  skmain.py  test.py  test2.py
IC272/lab7/: 6-i2ml-chap5multivariate.ppt  func.py  main (1).py  main.py  mainlab.py  model.py  test.py
IC272/lab8/: main.py  main2.py  main3.py  main4.py  model.py
IC272/lab9/: main1.py  main2.py  main3.py  main4.py  model.py
(+9 files in other folders)
